admission/ValidatingAdmissionPolicy/policies/run-as-group/ephemeralcontainers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: run-as-group-ephemeralcontainers
  annotations:
    security.kubeapt.io/displayName: 'Run As Group'
    security.kubeapt.io/description: spec.ephemeralContainers[*].securityContext.runAsGroup must be undefined or a non-zero
    security.kubeapt.io/resource: Ephemeralcontainers
    security.kubeapt.io/severity: "5"
    security.kubeapt.io/remediation: "Set spec.ephemeralContainers[*].securityContext.runAsGroup to >0 or omit it. Fields: spec.ephemeralContainers[*].securityContext.runAsGroup."
    policies.kolteq.com/validatingAdmissionPolicy: ab502359-d289-516a-a2db-df43d95b0808
  labels:
    check-run-as-group-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    check-run-as-group-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    check-run-as-group-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods/ephemeralcontainers
  validations:
  - expression: |
      !has(object.spec.ephemeralContainers) || object.spec.ephemeralContainers.all(ec,
        !has(ec.securityContext) ||
        !has(ec.securityContext.runAsGroup) ||
        ec.securityContext.runAsGroup > 0
      )
    message: |
      spec.ephemeralContainers[*].securityContext.runAsGroup must be undefined or a non-zero value (> 0).
